# geoacoustic

./: .gitignore  CMakeLists.txt  README.md  geoacoustic.sh  run.sh
armbuild/: Makefile  run.sh  setup.h
result/: 128_2048_out.txt  256_1024_out.txt  arm_tile.py  armrun.py  heatmap.py  nonrec.txt  out.txt  run.py
result/armserver/: benchviz.py  result_linear_0.txt  result_linear_4.txt  result_no_tiling.txt  result_vector_0.txt  result_vector_4.txt  result_zc4vec_0.txt  result_zc4vec_1.txt  result_zcube4_0.txt  result_zcube4_1.txt
result/geoserver/: benchviz.py  result.txt  result_linear_5.txt  result_vector_5.txt  result_zc4vec_3.txt  result_zcube4_2.txt  trd01_res.txt  trd02_res.txt  trd03_res.txt  trd04_res.txt  trd05_res.txt  trd06_res.txt  trd07_res.txt  trd08_res.txt  trd09_res.txt  trd10_res.txt  trd11_res.txt  trd12_res.txt
result/geoserver/bench_best/: LinearCell_0.txt  LinearCell_5.txt  VectorCell_0.txt  VectorCell_5.txt  ZC4VecCell_0.txt  ZC4VecCell_3.txt  ZCube4Cell_0.txt  ZCube4Cell_2.txt
result/geoserver/bench_vector/: VectorCell_0.txt  VectorCell_1.txt  VectorCell_2.txt  VectorCell_3.txt  VectorCell_4.txt  VectorCell_5.txt  VectorCell_6.txt  VectorCell_7.txt
result/kurchatnik/tests_2247591/: LinearCell_0.txt  LinearCell_5.txt  VectorCell_0.txt  VectorCell_5.txt  ZC4VecCell_0.txt  ZC4VecCell_3.txt  ZCube4Cell_0.txt  ZCube4Cell_2.txt
result/kurchatnik/tests_2247592/: LinearCell_0.txt  LinearCell_5.txt  VectorCell_0.txt  VectorCell_5.txt  ZC4VecCell_0.txt  ZC4VecCell_3.txt  ZCube4Cell_0.txt  ZCube4Cell_2.txt
result/kurchatnik/tests_2247593/: LinearCell_0.txt  LinearCell_5.txt  VectorCell_0.txt  VectorCell_5.txt  ZC4VecCell_0.txt  ZC4VecCell_3.txt  ZCube4Cell_0.txt  ZCube4Cell_2.txt
result/other/on_geoserver/: test_256x256_linear.txt  test_256x256_vector.txt  test_256x256_zcube2.txt  test_256x256_zcube4.txt
result/other_x86/result/: LinearCell_0.txt  LinearCell_5.txt  VectorCell_0.txt  VectorCell_5.txt  ZC4VecCell_0.txt  ZC4VecCell_3.txt  ZCube4Cell_0.txt  ZCube4Cell_2.txt  info.txt
result/profiled/: zc2vec_256x256_roofline.html
src/: CMakeLists.txt  cell.hpp  cube.hpp  domain.hpp  grid.hpp  main.cpp  mt_grid.hpp  solver.hpp  stencil.hpp  tiling.hpp  types.hpp
src/dumb/: solver.hpp
src/static/: cell.hpp  cell_layout.hpp  config.hpp  context.hpp  general.hpp  grid_proc.hpp  hyperplane_proc.hpp  linear_cell.hpp  looped_proc.hpp  macro.hpp  openmp_proc.hpp  packed_stencil.hpp  single_stencil.hpp  solver.hpp  stencil.hpp  tiling.hpp  tiling_proc.hpp  types.hpp  vector_cell.hpp  volume_array.hpp  zc2vec_cell.hpp  zc4vec_cell.hpp  zcube2_cell.hpp  zcube4_cell.hpp
src/static/arm/: neon128_cell.hpp  neon128_stencil.hpp
src/static/memory/: aligned_allocator.hpp
src/static/x86/: avx256_cell.hpp  avx256_stencil.hpp
src/trifles/: macro.hpp
src/trifles/logger/: logger.cpp  logger.hpp
x86build/: Makefile  run.sh  setup.h
